Make Obiba bootstrap Sub theme as an admin theme align Text administration Status modules updates table css corrections

--- a/less/obiba.less
+++ b/less/obiba.less
@@ -846,6 +846,9 @@ ul#strengthBar{
  }
 
 .system-status-report{
+  a{
+    color: #10610B !important;
+  }
   border: 1px solid rgba(77, 77, 77, 0.63) !important;
   > thead,
   > tbody,
@@ -879,4 +882,41 @@ ul#strengthBar{
   .info{
     background-color: #bdf;
   }
+}
+
+div.admin{
+  .left{
+    float: left;
+    width: 47%;
+    margin-left: 0px !important;
+  }
+  .admin-panel{
+    margin: 0;
+    padding: 0px !important;
+    .body{
+    padding: 0px !important;
+    }
+  }
+}
+table.update{
+  .version-status{
+    float: right;
+    span.icon > img{
+      vertical-align: middle !important;
+      margin-left: 10px;
+      margin-top: -10px;
+    }
+  }
+  table.version-latest{
+    border: none !important;
+    width: 100%;
+    td.version-links {
+    float: right;
+      ul{
+        list-style-type: none !important;
+      }
+   }
+
+  }
+
 }
